[FIX] add z-index heaader FINE

--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ body {
 header {
     position: sticky;
     top: 0%;
+    z-index: 1;
     background-color: white;
 }
 .container-header {
